# hanoi_strips

./: .gitignore  Cargo.toml  LICENSE  README.md  tester.py
benches/: Cargo.toml.old  my_benchmark.rs
src/: accion.rs  lib.rs  main.rs  stackeable.rs  strips.rs  stripsstate.rs
