[package]
name = "strips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
opt-level = 3
strip = false 
lto = true
panic = "abort"

[dependencies]
hashbrown = "0.13.2"
itertools = "0.10.5"
