[package]
name = "hanoi"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
opt-level = 3
strip = false 
lto = true
panic = "abort"

[dependencies]
hashbrown = "0.13.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

