[package]
name = "hanoi"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
opt-level = 3
strip = false 
lto = "fat"
codegen-units = 16
panic = "abort"

[dependencies]
hashbrown = "0.14"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

